--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -2,43 +2,47 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background-color: #1B1B1B;
+    background-color: #000;
     overflow-x: hidden;
 }
 #big-title {
     position: relative; z-index: 1000;
-    background: #1b1b1b;
+    background: #000;
 }
 #section1 {
     position: relative;
     z-index: 1000;
-    background: #1b1b1b;
+    /* background: #1b1b1b; */
+    background: #000;
+}
+video {
+    object-fit: cover;
 }
 #section2 {
     position: relative;
     z-index: 1000;
-    background: #1b1b1b;
+    background: #000;
 }
 #section3 {
     position: relative;
     z-index: 1000;
-    background: #1b1b1b;
+    background: #000;
 }
 #section4 {
     position: relative;
     z-index: 1000;
-    background: #1b1b1b;
+    background: #000;
 }
 #section5 {
     position: relative;
     z-index: 1000;
-    background: #1b1b1b;
+    background: #000;
 }
 #section6 {}
 #section7 {
     position: relative;
     z-index: 1000;
-    background: #1b1b1b;
+    background: #000;
 }
 /* cursor */
 .cursor {
@@ -114,18 +118,19 @@ body {
     position: relative;
     transform: skew(0deg, 0deg);
     opacity: 1;
+    width: 100%;
 }
 .section1 .s1-title {
     position: absolute; left: 0; top: 10vw;
+    width: 100%;
 }
-.section1 .s1-title h1 {
+.section1 .s1-title .smoke .nosmoke{
     font-family: 'Ilisarniq-Black';
     font-size: 7.5vw;
     line-height: 7.3vw;
-    color: #fff;
     text-transform: uppercase;
-}
-.section1 .s1-title h1 span {
+    text-align: center;
+    width: 100%;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px #fff;
     -moz-text-fill-color: transparent;
@@ -135,6 +140,169 @@ body {
     -o-text-fill-color: 2px #fff;
     -o-text-stroke: 2px #fff;
 }
+.section1 .s1-title .smoke .smokespan {
+    font-family: 'Ilisarniq-Black';
+    font-size: 7.5vw;
+    line-height: 7.3vw;
+    width: 100%;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+}
+.smoke1 {
+    display: inline-block;
+    animation: smoke 1s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke2 {
+    display: inline-block;
+    animation: smoke2 1s .75s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke2 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke3 {
+    display: inline-block;
+    animation: smoke3 1s 1.25s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke3 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke4 {
+    display: inline-block;
+    animation: smoke4 1s 1.75s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke4 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke5 {
+    display: inline-block;
+    animation: smoke5 1s 2.25s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke5 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke6 {
+    display: inline-block;
+    animation: smoke6 1s 2.75s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke6 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke7 {
+    display: inline-block;
+    animation: smoke7 1s 3.25s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke7 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke8 {
+    display: inline-block;
+    animation: smoke8 1s 3.75s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke8 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+.smoke9 {
+    display: inline-block;
+    animation: smoke9 1s 4.25s linear forwards;
+    opacity: 0;
+}
+@keyframes smoke9 {
+    0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: rotateY(0);
+        filter: blur(0);
+    }
+}
+
 .section1 .s1-title p {
     margin-top: 1.5vw;
     text-indent: 0.6vw;
