--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -768,26 +768,6 @@ h2.ftitle {
     width: 4px;
     height: 14px;
 }
-/* .justsquare {
-    position: absolute; top: -8px; left: 70px;
-    width: 38.333vw;
-    height: 8px;
-    background: #35363A;
-}
-.justcircle1 {
-    position: absolute; top: -16px; left: 62px;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #202124;
-}
-.justcircle2 {
-    position: absolute; top: -16px; right: 80px;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #202124;
-} */
 
 /* section3 */
 #section3 {
@@ -1066,22 +1046,6 @@ h2.ftitle2 {
     0% {transform: rotate(0deg);}
     100% {transform: rotate(-360deg);}
 }
-/* .circle-wrap8 {
-    position: absolute; top: 91vw; right: 83.4vw;
-    font-family: 'Ilisarniq-Regular';
-    font-size: 16px;
-    letter-spacing: 0.56px;
-    text-transform: uppercase;
-    color: #fff;
-    white-space: nowrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 5.208vw; height: 5.208vw;
-    border: 2px solid #72652E;
-    border-radius: 50%;
-}
-.circle-wrap8 .s4-circle8 {} */
 
 .right-chromebox {position: relative;}
 .right-chromebox .right-chromewrap {
@@ -1278,26 +1242,6 @@ h2.ftitle2 {
     width: 4px;
     height: 14px;
 }
-/* .justsquare {
-    position: absolute; top: -8px; left: 70px;
-    width: 38.333vw;
-    height: 8px;
-    background: #35363A;
-}
-.justcircle1 {
-    position: absolute; top: -16px; left: 62px;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #202124;
-}
-.justcircle2 {
-    position: absolute; top: -16px; right: 80px;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #202124;
-} */
 
 /* section5 */
 #section5 {
@@ -1380,22 +1324,6 @@ h2.ftitle2 {
     0% {transform: rotate(0deg);}
     100% {transform: rotate(-360deg);}
 }
-/* .circle-wrap8 {
-    position: absolute; top: 91vw; right: 83.4vw;
-    font-family: 'Ilisarniq-Regular';
-    font-size: 16px;
-    letter-spacing: 0.56px;
-    text-transform: uppercase;
-    color: #fff;
-    white-space: nowrap;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 5.208vw; height: 5.208vw;
-    border: 2px solid #72652E;
-    border-radius: 50%;
-}
-.circle-wrap8 .s5-circle8 {} */
 
 .right-chromebox {position: relative;}
 .right-chromebox .right-chromewrap {
@@ -1592,26 +1520,6 @@ h2.ftitle2 {
     width: 4px;
     height: 14px;
 }
-/* .justsquare {
-    position: absolute; top: -8px; left: 70px;
-    width: 38.333vw;
-    height: 8px;
-    background: #35363A;
-}
-.justcircle1 {
-    position: absolute; top: -16px; left: 62px;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #202124;
-}
-.justcircle2 {
-    position: absolute; top: -16px; right: 80px;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #202124;
-} */
 
 /* section6 */
 #section6 {
@@ -1681,8 +1589,8 @@ h2.ftitle2 {
 .ani-wrap {
     position: relative; 
     top: 145px;
-    /* left: 1901px; */
-    left: 99.010vw;
+    /* left: 1920px; */
+    left: 100vw;
     /* width: 8013px; */
     width: 417.344vw;
     height: 648px;
@@ -1944,49 +1852,6 @@ animation: shadow 0.58s linear infinite;
     transform-origin: center center;
     animation: back 4s 8s ease-in-out infinite;
 }
-/* @keyframes rol {
-    0% {transform: rotatex(0) rotatey(0) rotatez(0) translatey(0);}
-    100% {
-        transform: rotatex(360deg) rotatey(360deg) 
-        rotatez(360deg) translatey(0);
-    }
-}
-
-@keyframes top {
-    0% {transform: rotatex(90deg) translatey(-150px) translatez(0);}
-    50% {transform: rotatex(90deg) translatey(-150px) translatez(150px);}
-    100% {transform: rotatex(90deg) translatey(-150px) translatez(0);}
-}
-
-@keyframes bottom {
-    0% {transform: rotatex(-90deg) translatey(150px) translatez(0);}
-    50% {transform: rotatex(-90deg) translatey(150px) translatez(150px);}
-    100% {transform: rotatex(-90deg) translatey(150px) translatez(0);}
-}
-
-@keyframes left {
-    0% {transform: rotatey(-90deg) translatex(-150px) scaley(1);}
-    50% {transform: rotatey(-90deg) translatex(-150px) scaley(3);}
-    100% {transform: rotatey(-90deg) translatex(-150px) scaley(1);}
-}
-
-@keyframes right {
-    0% {transform: rotatey(90deg) translatex(150px) scaley(1);}
-    50% {transform: rotatey(90deg) translatex(150px) scaley(3);}
-    100% {transform: rotatey(90deg) translatex(150px) scaley(1);}
-}
-
-@keyframes front {
-    0%   {transform: rotateX(0deg) translateX(0px) scaley(1)}
-    50%  {transform: rotateX(0deg) translateX(0px) scaley(3)}
-    100% {transform: rotateX(0deg) translateX(0px) scaley(1)}
-}
-
-@keyframes back {
-    0%   {transform: rotateY(180deg) translatez(0px) scaley(1);}
-    50%  {transform: rotateY(180deg) translatez(0px) scaley(3);}
-    100% {transform: rotateY(180deg) translatez(0px) scaley(1);}
-} */
 .step {
     background-image: url(https://tistory2.daumcdn.net/tistory/3108288/skin/images/steps.jpg);
     width: 800px; height: 600px;
@@ -2000,16 +1865,69 @@ animation: shadow 0.58s linear infinite;
     100% {background-position: -12800px 0}
   }
 
-/* section7 */
+
+/* re:section7 */
 #section7 {
     width: 100%;
-    height: 480vh;
-    /* height무조건 있어야 세로스크롤 느낌 나옴 */
+    height: 740vh;
+    padding-top: 50vh;
+}
+.section7 {}
+.script-text {
+    font-family: 'Ilisarniq-Black';
+    /* width: 100%;
+    height: 100vh; */
+    position: fixed;
+    top: 34%; left: 10%;
+    z-index: 100;
+    opacity: 0;
+}
+.script-text h2 {
+    font-size: 10.417vw;
+    color: #fff;
+    text-transform: uppercase;
+}
+.script-text h3 {
+    margin-top: -30px;
+    margin-left: 17px;
+    font-size: 1.875vw;
+    color: #fff;
+    text-transform: uppercase;
+}
+.script-text p {
+    margin-left: 17px;
+    font-family: 'S-CoreDream-3Light';
+    width: 33.906vw;
+    font-size: 0.938vw;
+    color: #fff;
+    letter-spacing: 0.5px;
+}
+.script-num {
+    opacity: 0;
+}
+.script-num .snum1 {
+    position: fixed;
+    top: 48px; left: 34px;
+    font-family: 'Ilisarniq-Black';
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 5px;
+    transform: rotate(90deg);
+}
+.script-num .snum2 {
+    position: fixed;
+    bottom: 48px; left: 34px;
+    font-family: 'Ilisarniq-Black';
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 5px;
+    transform: rotate(-90deg);
 }
 .parallax {
     position: relative;
     height: 100vh;
-    margin-bottom: 60vh;
+    margin-top: 40vh;
+    margin-bottom: 80vh;
 }
 .scriptview-wrap {
                         /*left: 638px; */
@@ -2027,43 +1945,24 @@ animation: shadow 0.58s linear infinite;
     /* width: 1174px; height: 694px; */
     width: 61.146vw; height: 694px;
 }
-.view-box .iframe {
+.view-box .ifr1 {
     width: 100%; height: 100%;
 }
-.script-text {
-    font-family: 'Ilisarniq-Black';
-    position: absolute;
-    top: 34%; left: 10%;
-    /* transition: all 1s; */
-    z-index: 100;
+.slide {
+    position: relative;
+    height: 100vh;
+    margin: 80vh 0;
 }
-.scriptview-wrap:hover ~ .script-text {
-    display: none;
+.view-box .ifr2 {
+    width: 100%; height: 100%;
 }
-
-.script-text h2 {
-    /* font-size: 200px; */
-    font-size: 10.417vw;
-    color: #fff;
-    text-transform: uppercase;
+.mouse {
+    position: relative;
+    height: 100vh;
+    margin: 80vh 0;
 }
-.script-text h3 {
-    margin-top: -30px;
-    margin-left: 17px;
-    /* font-size: 36px; */
-    font-size: 1.875vw;
-    color: #fff;
-    text-transform: uppercase;
-}
-.script-text p {
-    margin-left: 17px;
-    font-family: 'S-CoreDream-3Light';
-    /* width: 651px; */
-    width: 33.906vw;
-    /* font-size: 18px; */
-    font-size: 0.938vw;
-    color: #fff;
-    letter-spacing: 0.5px;
+.view-box .ifr3 {
+    width: 100%; height: 100%;
 }
 .script-btn {
     position: absolute;
@@ -2094,7 +1993,7 @@ animation: shadow 0.58s linear infinite;
 .script-btn a:last-child {
     margin-right: 0;
 }
-.sbtn1 {
+.script-btn a:nth-child(odd) {
     animation: updown1 5s linear infinite;
 }
 @keyframes updown1 {
@@ -2104,107 +2003,34 @@ animation: shadow 0.58s linear infinite;
     75%{transform: translateY(-13px) rotate(-216deg);}
     100%{transform: translateY(0px) rotate(-360deg);}
 }
-.sbtn2 {
-    animation: updown2 5s 1s linear infinite;
+.script-btn a:nth-child(even) {
+    animation: updown2 5s linear infinite;
 }
 @keyframes updown2 {
     0%{transform: translateY(0px) rotate(0);}
-    25%{transform: translateY(13px) rotate(-72deg);}
-    50%{transform: translateY(0px) rotate(-144deg);}
-    75%{transform: translateY(-13px) rotate(-216deg);}
-    100%{transform: translateY(0px) rotate(-360deg);}
-}
-.sbtn3 {
-    animation: updown3 5s 2s linear infinite;
-}
-@keyframes updown3 {
-    0%{transform: translateY(0px) rotate(0);}
     25%{transform: translateY(13px) rotate(72deg);}
     50%{transform: translateY(0px) rotate(144deg);}
     75%{transform: translateY(-13px) rotate(216deg);}
     100%{transform: translateY(0px) rotate(360deg);}
 }
-.sbtn4 {
-    animation: updown4 5s 3s linear infinite;
+.script-btn a:nth-child(2) {
+    animation-delay: 1s;
 }
-@keyframes updown4 {
-    0%{transform: translateY(0px) rotate(0);}
-    25%{transform: translateY(13px) rotate(-72deg);}
-    50%{transform: translateY(0px) rotate(-144deg);}
-    75%{transform: translateY(-13px) rotate(-216deg);}
-    100%{transform: translateY(0px) rotate(-360deg);}
+.script-btn a:nth-child(3) {
+    animation-delay: 2s;
 }
-.sbtn5 {
-    animation: updown5 5s 4s linear infinite;
+.script-btn a:nth-child(4) {
+    animation-delay: 3s;
 }
-@keyframes updown5 {
-    0%{transform: translateY(0px) rotate(0);}
-    25%{transform: translateY(13px) rotate(72deg);}
-    50%{transform: translateY(0px) rotate(144deg);}
-    75%{transform: translateY(-13px) rotate(216deg);}
-    100%{transform: translateY(0px) rotate(360deg);}
+.script-btn a:nth-child(5) {
+    animation-delay: 4s;
 }
-.sbtn6 {
-    animation: updown6 5s 5s linear infinite;
+.script-btn a:nth-child(6) {
+    animation-delay: 5s;
 }
-@keyframes updown6 {
-    0%{transform: translateY(0px) rotate(0);}
-    25%{transform: translateY(13px) rotate(-72deg);}
-    50%{transform: translateY(0px) rotate(-144deg);}
-    75%{transform: translateY(-13px) rotate(-216deg);}
-    100%{transform: translateY(0px) rotate(-360deg);}
+.script-btn a:nth-child(7) {
+    animation-delay: 6s;
 }
-.sbtn7 {
-    animation: updown7 5s 6s linear infinite;
-}
-@keyframes updown7 {
-    0%{transform: translateY(0px) rotate(0);}
-    25%{transform: translateY(13px) rotate(72deg);}
-    50%{transform: translateY(0px) rotate(144deg);}
-    75%{transform: translateY(-13px) rotate(216deg);}
-    100%{transform: translateY(0px) rotate(360deg);}
-}
-.sbtn8 {
-    animation: updown8 5s 7s linear infinite;
-}
-@keyframes updown8 {
-    0%{transform: translateY(0px) rotate(0);}
-    25%{transform: translateY(13px) rotate(-72deg);}
-    50%{transform: translateY(0px) rotate(-144deg);}
-    75%{transform: translateY(-13px) rotate(-216deg);}
-    100%{transform: translateY(0px) rotate(-360deg);}
-}
-.script-num .snum1 {
-    position: absolute;
-    top: 48px; left: 34px;
-    font-family: 'Ilisarniq-Black';
-    font-size: 20px;
-    color: #fff;
-    letter-spacing: 5px;
-    transform: rotate(90deg);
-}
-.script-num .snum2 {
-    position: absolute;
-    bottom: 48px; left: 34px;
-    font-family: 'Ilisarniq-Black';
-    font-size: 20px;
-    color: #fff;
-    letter-spacing: 5px;
-    transform: rotate(-90deg);
-}
-.slide {
-    position: relative;
-    height: 100vh;
-    margin-bottom: 60vh;
-}
-.view-box .iframe2 {
-    width: 100%; height: 100%;
-}
-.mouse {
-    position: relative;
-    height: 100vh;
-    margin-bottom: 60vh;
-}
-.view-box .iframe3 {
-    width: 100%; height: 100%;
+.script-btn a:nth-child(8) {
+    animation-delay: 7s;
 }
