--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -44,6 +44,11 @@ video {
     z-index: 1000;
     background: #000;
 }
+#section8 {
+    position: relative;
+    z-index: 1000;
+    background: #000;
+}
 /* cursor */
 .cursor {
     position: absolute;
@@ -419,7 +424,7 @@ h2.ftitle {
     content: '';
     position: absolute;
     height: 100%;
-    background: rgb(243, 138, 0);
+    background: rgb(0, 0, 0);
     z-index: 1;
     animation: reveal 1.8s ease-in-out;
 }
@@ -918,7 +923,7 @@ h2.ftitle2 {
     content: '';
     position: absolute;
     height: 100%;
-    background: rgb(243, 138, 0);
+    background: rgb(0, 0, 0);
     z-index: 1;
     animation: reveal2 1.8s ease-in-out;
 }
@@ -1869,7 +1874,7 @@ animation: shadow 0.58s linear infinite;
 /* re:section7 */
 #section7 {
     width: 100%;
-    height: 740vh;
+    height: 600vh;
     padding-top: 50vh;
 }
 .section7 {}
@@ -1882,6 +1887,36 @@ animation: shadow 0.58s linear infinite;
     z-index: 100;
     opacity: 0;
 }
+/* .script-text.parallax-text {
+    opacity: 0;
+}
+.script-text.slide-text {
+    opacity: 0;
+}
+.script-text.mouse-text {
+    opacity: 0;
+}
+.script-text.parallax-text.script-reveal {
+    animation: titshow 0.1s 1.1s forwards;
+}
+@keyframes titshow {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+.script-text.script-reveal::before {
+    content: '';
+    position: absolute; bottom: 0; left: 0;
+    width: 0;
+    height: 0;
+    background: rgb(243, 138, 0);
+    z-index: 1;
+    animation: scriptreveal 1.8s ease-in-out;
+}
+@keyframes scriptreveal {
+    0% {bottom: 0; left: 0; width: 0; height: 0;}
+    65% {bottom: 0; left: 0; width: 100%; height: 100%;}
+    100% {bottom: 0; left: 100%; width: 0; height: 0;}
+} */
 .script-text h2 {
     font-size: 10.417vw;
     color: #fff;
@@ -1940,6 +1975,7 @@ animation: shadow 0.58s linear infinite;
     box-sizing: border-box;
     border: 1px solid #424242;
     border-radius: 15px;
+    z-index: 100;
 }
 .view-box {
     /* width: 1174px; height: 694px; */
@@ -1967,6 +2003,7 @@ animation: shadow 0.58s linear infinite;
 .script-btn {
     position: absolute;
     bottom: 8%; left: 39%;
+    z-index: 100;
 }
 .script-btn a {
     display: inline-block;
@@ -2033,4 +2070,71 @@ animation: shadow 0.58s linear infinite;
 }
 .script-btn a:nth-child(8) {
     animation-delay: 7s;
+}
+
+/* section8 */
+#section8 {
+    height: 100vh;
+}
+.s8-title {}
+.s8-title h2 {
+    font-family: 'Ilisarniq-Black';
+    font-size: 144px;
+    color: #fff;
+    text-transform: uppercase;
+    padding-top: 30px;
+}
+.s8-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: absolute; top: 60%; left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    width: 868px;
+    height: 404px;
+    color: #fff;
+    font-family: 'Ilisarniq-Light';
+}
+.s8-content input {
+    width: 400px;
+    font-size: 24px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #fff;
+    align-self: flex-end;
+    color: #fff;
+    font-family: 'Ilisarniq-Light';
+    outline: none;
+}
+.contact-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 146px; height: 146px;
+    border-radius: 50%;
+    border: 2px solid #AA5018; 
+    color: #fff;
+    font-size: 16px;
+    letter-spacing: 5.8px;
+    white-space: nowrap;
+    position: absolute; top: 193px; right: 150px;
+}
+.contact-btn {
+    transition: background .2s;
+}
+.contact-btn:hover {
+    color: #fff;
+    background: #AA5018;
+}
+.contact-btn.active8 {
+    background: #AA5018;
+}
+
+.contact-btn {
+    animation: contact-btn 5s linear infinite;
+}
+@keyframes contact-btn {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(-360deg);}
 }
