--- a/port/css/style3.css
+++ b/port/css/style3.css
@@ -411,9 +411,8 @@ h2.ftitle {
     height: 24.583vw;
     z-index: 2;
     background: #fff;
-    opacity: 0;
 }
-.left-desc-wrap.reveal {
+/* .left-desc-wrap.reveal {
     animation: descshow 0.1s 1.1s forwards;
 }
 @keyframes descshow {
@@ -432,7 +431,7 @@ h2.ftitle {
     0% {top: 0; left: 0; width: 0%;}
     65% {top: 0; left: 0; width: 100%;}
     100% {top: 0; left: 100%; width: 0;}
-}
+} */
 .left-desc-wrap .left-desc {
     /* position: absolute; top: 190px; left: 64px; */
     position: absolute; top: 9.896vw; left: 3.333vw;
@@ -464,16 +463,15 @@ h2.ftitle {
     width: 27.083vw;
 
 }
-.btn-wrap .btn a {
+.btn-wrap a {
     font-family: 'Ilisarniq-Regular';
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     width: 12.813vw;
     height: 48px;
     box-sizing: border-box;
     background: #000;
-    padding: 20px 50px;
+    text-align: center;
+    line-height: 48px;
     color: #fff;
     font-size: 0.938vw;
     text-transform: uppercase;
@@ -908,11 +906,10 @@ h2.ftitle2 {
     position: absolute; top: 36vw; right: 58.5vw;
     width: 33.854vw;
     height: 24.583vw;
-    z-index: 2;
+    z-index: 10;
     background: #fff;
-    opacity: 0;
 }
-.right-desc-wrap.reveal {
+/* .right-desc-wrap.reveal {
     animation: descshow 0.1s 1.1s forwards;
 }
 @keyframes descshow {
@@ -931,7 +928,7 @@ h2.ftitle2 {
     0% {top: 0; right: 0; width: 0%;}
     65% {top: 0; right: 0; width: 100%;}
     100% {top: 0; right: 100%; width: 0;}
-}
+} */
 .right-desc-wrap .right-desc {
     position: absolute; top: 9.896vw; left: 3.333vw;
     display: flex;
@@ -959,18 +956,16 @@ h2.ftitle2 {
     display: flex;
     justify-content: space-between;
     width: 27.083vw;
-
 }
-.btn-wrap2 .btn2 a {
+.btn-wrap2 a {
     font-family: 'Ilisarniq-Regular';
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     width: 12.813vw;
     height: 48px;
     box-sizing: border-box;
     background: #000;
-    padding: 20px 50px;
+    text-align: center;
+    line-height: 48px;
     color: #fff;
     font-size: 0.938vw;
     text-transform: uppercase;
@@ -1269,7 +1264,7 @@ h2.ftitle2 {
     background: url(../img/ptdime_gray.jpg) no-repeat center center;
     width: 100%; height: 100%;
 }
-.btn-wrap2 .btn2 a {
+/* .btn-wrap2 .btn2 a {
     font-family: 'Ilisarniq-Regular';
     display: flex;
     justify-content: center;
@@ -1282,7 +1277,7 @@ h2.ftitle2 {
     color: #fff;
     font-size: 0.938vw;
     text-transform: uppercase;
-}
+} */
 .s5-circleAll {
     transition: background .2s;
 }
@@ -1885,7 +1880,7 @@ animation: shadow 0.58s linear infinite;
     position: fixed;
     top: 34%; left: 10%;
     z-index: 100;
-    opacity: 0;
+    /* opacity: 0; */
 }
 /* .script-text.parallax-text {
     opacity: 0;
