--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -4,7 +4,11 @@ body {
     overflow-x: hidden;
 }
 #contents {}
-#header {height: 100vh;}
+#header {
+    height: 100vh;
+    /* background: url(../img/mainbg.jpg) no-repeat center center fixed;
+    background-size: cover; */
+}
 #section1 {height: 100vh; background: powderblue;}
 #section2 {}
 #section3 {}
@@ -24,7 +28,8 @@ body {
 /* cursor */
 .cursor {
     position: absolute;
-    width: 400px; height: 400px;
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 50%;
     user-select: none;
     pointer-events: none;
@@ -33,14 +38,23 @@ body {
     z-index: -1;
 
 }
-
+h1.main-tit .split span {
+    display: inline-block;
+    min-width: 1vw;
+    opacity: 0;
+}
+.sub-tit.split span {
+    display: inline-block;
+    min-width: 0.08vw;
+    opacity: 0;
+}
 /* header */
 .header {
     height: 100vh;
     position: relative;
 }
 .header-title {
-    width: 91%;
+    width: 72.610vw;
     position: absolute; left: 50%; top: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Ilisarniq-Black';
@@ -57,36 +71,54 @@ body {
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px #fff;
 }
-.header-title h1.main-tit em {}
+.header-title h1.main-tit strong span {
+    transform: translateY(80px);
+}
+.header-title h1.main-tit em span {
+    transform: translateY(80px);
+}
 .header-title .sub-tit {
     font-size: 2vw;
     font-family: 'Ilisarniq-Light';
     padding-bottom: 10vw;
-
 }
 .header-title .desc {
     font-family: 'S-CoreDream-3Light';
     font-size: 1vw;
     line-height: 1.6vw;
+    transform: translateY(10px);
+    opacity: 0;
 }
 .header-title .desc strong {
     font-family: 'S-CoreDream-6Bold';
 }
 
 /* mediaquery */
-@media (max-width: 1700px){
-    .header-title {width: 80%;}
+@media (max-width: 1024px){
+    .header-title h1.main-tit {
+        text-align: center;
+        font-size: 66px;
+        line-height: 66px;
+    }
+    .header-title .sub-tit {
+        text-align: center;
+        padding-top: 40px;
+    }
+    .header-title .desc {
+        font-size: 15px;
+        line-height: 25px;
+    }
 }
-@media (max-width: 1310px){
-  
+
+@media (max-width: 800px){
+    .header-title {
+        width: 74.610vw;
+    }
+    .header-title h1.main-tit {
+        font-size: 53px;
+        padding-top: 75px;
+    }
+    .header-title .desc, .cursor {
+        display: none;
+    }
 }
-
-@media (max-width: 1024px){}
-
-@media (max-width: 960px){}
-
-@media (max-width: 768px){}
-
-@media (max-width: 600px){}
-
-@media (max-width: 320px){}
