--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -24,7 +24,25 @@ body {
 
 
 /* cursor */
-.cursor {}
+.cursor {
+    position: absolute;
+    border-radius: 50%;
+    width: 3000px; height: 3000px;
+    z-index: -1;
+    user-select: none;
+    pointer-events: none;
+    background: url(../img/mainbg.jpg) no-repeat center center fixed; /* body에 있는거 그래도 사용하는데 꼭 background-attachment: fixed가 추가되어야 한다.*/
+    background-size: cover; /* 이게 없으면 실제 이미지 크기만큼의 영역이 생겨버린다.*/
+    opacity: 0;
+}
+.cursorbg {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100vh;
+    background: url(../img/mainbg.jpg) no-repeat center center fixed; /* body에 있는거 그래도 사용하는데 꼭 background-attachment: fixed가 추가되어야 한다.*/
+    background-size: cover; /* 이게 없으면 실제 이미지 크기만큼의 영역이 생겨버린다.*/
+}
 
 /* split */
 h1.main-tit .split span {
