--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -4,10 +4,14 @@ body {
     overflow-x: hidden;
 }
 #contents {}
-#header {
+#big-title {
     height: 100vh;
+    background: powderblue;
+    position: relative;
+    overflow: hidden;
 }
-#section1 {height: 100vh; background: powderblue;}
+#header {height: 100vh;}
+#section1 {height: 100vh;}
 #section2 {}
 #section3 {}
 #section4 {}
@@ -36,12 +40,73 @@ body {
     opacity: 0;
 }
 .cursorbg {
-    position: fixed;
+    position: absolute;
     top: 0; left: 0;
     width: 100%;
     height: 100vh;
     background: url(../img/mainbg.jpg) no-repeat center center fixed; /* body에 있는거 그래도 사용하는데 꼭 background-attachment: fixed가 추가되어야 한다.*/
     background-size: cover; /* 이게 없으면 실제 이미지 크기만큼의 영역이 생겨버린다.*/
+}
+
+/* big-title */
+.big-title {
+    position: absolute; top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.big-title div {
+    position: relative;
+    font-family: 'Ilisarniq-Black';
+    height: 350px;
+    font-size: 10.4vw;
+    text-transform: uppercase;
+    letter-spacing: 0.53vw;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 2px #fff;
+}
+.underline {
+    position: absolute; top: -30px; left: 0;
+    width: inherit;
+    height: 10px !important;
+    border: 2px solid white;
+}
+.box-wrap {
+    width: 100%; height: 100%;
+    font-size: 0;
+    transform: translate(430px,-400px) rotate(45deg);
+}
+.box {
+    width: 16%; height: 3000px;
+    display: inline-block;
+}
+.box:nth-child(1) {
+    background: red;
+    font-size: 16px;
+}
+.box:nth-child(2) {
+    background: orange;
+    font-size: 16px;
+}
+.box:nth-child(3) {
+    background: yellow;
+    font-size: 16px;
+}
+.box:nth-child(4) {
+    background: gray;
+    font-size: 16px;
+}
+.box:nth-child(5) {
+    background: red;
+    font-size: 16px;
+}
+.box:nth-child(6) {
+    background: orange;
+    font-size: 16px;
 }
 
 /* split */
@@ -133,20 +198,10 @@ h1.main-tit .split span {
         width: 74.610vw;
     }
     .header-title h1.main-tit {
-        font-size: 53px;
+        font-size: 25px;
+        line-height: 30px;
         text-align: center;
-        padding-top: 75px;
-    }
-    .header-title .desc, .cursor, .cursorbg {
-        display: none;
-    }
-}
-
-@media (max-width: 414px){
-    .header-title h1.main-tit {
-        font-size: 35px;
-        line-height: 37px;
-        padding-top: 56px;
+        padding-top: 40px;
     }
     .header-title h1.main-tit strong {
         -webkit-text-stroke: 0.5px #fff;
@@ -168,19 +223,8 @@ h1.main-tit .split span {
     .header-title .sub-tit {
         font-size: 16px;
     }
-}
-
-@media (max-width: 375px) {
-    .header-title h1.main-tit {
-        font-size: 32px;
-        padding-top: 31px;
-    }
-}
-
-@media (max-width: 360px) {
-    .header-title h1.main-tit {
-        font-size: 30px;
-        padding-top: 40px;
+    .header-title .desc, .cursor, .cursorbg {
+        display: none;
     }
 }
 
