--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -6,12 +6,12 @@ body {
 #contents {}
 #big-title {
     height: 100vh;
-    background: powderblue;
+    background: #fff;
     position: relative;
     overflow: hidden;
 }
 #header {height: 100vh;}
-#section1 {height: 100vh;}
+#section1 {}
 #section2 {}
 #section3 {}
 #section4 {}
@@ -26,12 +26,11 @@ body {
     margin: 0 auto;
 }
 
-
 /* cursor */
 .cursor {
     position: absolute;
     border-radius: 50%;
-    width: 3000px; height: 3000px;
+    width: 100%; height: 100vh;
     z-index: -1;
     user-select: none;
     pointer-events: none;
@@ -48,66 +47,78 @@ body {
     background-size: cover; /* 이게 없으면 실제 이미지 크기만큼의 영역이 생겨버린다.*/
 }
 
+/* info */
+.info {
+    position: fixed; bottom: 20px; right: 20px;
+    background: rgba(0, 0, 0, 0.4);
+    color: #fff; padding: 10px;
+    font-size: 14px; font-weight: 300;
+    z-index: 1000;
+    font-style: normal;
+}
+
 /* big-title */
 .big-title {
     position: absolute; top: 50%; left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
     width: 100%;
-    height: 100%;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 .big-title div {
-    position: relative;
+    position: relative; top: 355px;
     font-family: 'Ilisarniq-Black';
     height: 350px;
     font-size: 10.4vw;
     text-transform: uppercase;
     letter-spacing: 0.53vw;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 2px #fff;
 }
-.underline {
+.big-title div.reveal {
+    color: #fff;
+    top: 0;
+    transition: all 0.5s 0.8s;
+}
+/* .underline {
     position: absolute; top: -30px; left: 0;
     width: inherit;
     height: 10px !important;
-    border: 2px solid white;
-}
+    border: 2px solid #000;
+} */
 .box-wrap {
-    width: 100%; height: 100%;
+    width: 4000px;
+    height: 100%;
     font-size: 0;
-    transform: translate(430px,-400px) rotate(45deg);
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+    transform: rotate(45deg);
 }
 .box {
-    width: 16%; height: 3000px;
+    width: 7%;
+    height: 3000px;
     display: inline-block;
+    background-color: rgb(255, 255, 255);
+    position: relative;
 }
-.box:nth-child(1) {
-    background: red;
-    font-size: 16px;
+.box.reveal::before {
+    content: '';
+    position: absolute; left: 0; top: 0;
+    width: 100%;
+    height: 100%;
+    background: #1b1b1b;
+    border: 2px solid #1b1b1b;
+    z-index: 1;
+    animation: reveal 1s ease-in-out forwards;
 }
-.box:nth-child(2) {
-    background: orange;
-    font-size: 16px;
+@keyframes reveal {
+    0% {top: 0; left: 0; width: 0%;}
+    100% {top: 0; left: 0%; width: 100%;}
 }
-.box:nth-child(3) {
-    background: yellow;
-    font-size: 16px;
-}
-.box:nth-child(4) {
-    background: gray;
-    font-size: 16px;
-}
-.box:nth-child(5) {
-    background: red;
-    font-size: 16px;
-}
-.box:nth-child(6) {
-    background: orange;
-    font-size: 16px;
-}
+
+
 
 /* split */
 h1.main-tit .split span {
