--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -63,16 +63,17 @@ body {
     transform: translate(-50%, -50%);
     z-index: 10;
     width: 100%;
-    height: 350px;
+    /* height: 350px; */
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
 }
 .big-title div {
-    position: relative; top: 355px;
+    position: relative; top: 220px;
     font-family: 'Ilisarniq-Black';
-    height: 350px;
+    padding-bottom: 30px;
+    /* height: 350px; */
     font-size: 10.4vw;
     text-transform: uppercase;
     letter-spacing: 0.53vw;
@@ -80,7 +81,7 @@ body {
 .big-title div.reveal {
     color: #fff;
     top: 0;
-    transition: all 0.5s 0.8s;
+    transition: all 1s;
 }
 /* .underline {
     position: absolute; top: -30px; left: 0;
