--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -1,8 +1,7 @@
 /* layout */
-
 body {
     background: #1b1b1b;
-    overflow-x: hidden;
+    /* overflow-x: hidden; 모바일에서 에러라 삭제해야함 */
 }
 #contents {}
 /* #big-title {
@@ -11,7 +10,12 @@ body {
     position: relative;
     overflow: hidden;
 } */
-#header {height: 100vh;}
+#header {
+    /* 커서 히든하기 위해 포지션 필요 */
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+}
 #section1 {
     overflow-x: hidden;
     height: 220vh;
@@ -32,9 +36,14 @@ body {
 }
 
 /* cursor */
+/* .cursor-wrap {
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100vh;
+    overflow: hidden;
+} */
 .cursor {
     position: absolute;
-    /* width: 100%; height: 100vh; */
+    /* width: 3000px; height: 3000px; */
     z-index: -1;
     user-select: none;
     pointer-events: none;
@@ -124,25 +133,36 @@ h1.main-tit .split span {
 }
 .left-title {
     position: relative;
+    left: 0px;
 }
 .left-title h2 {
-    /* position: absolute; top: 1.25vw; left: 7.604vw; */
-    position: absolute; top: 16.25vw; left: 15.604vw;
-    transform: translateX(0);
+    /* 애니메이션 후 position: absolute; top: 1.25vw; left: 7.604vw; */
+    /* 애니메이션 전 position: absolute; top: 16.25vw; left: 15.604vw; */
+    position: absolute; top: 16.25vw; left: 24.604vw;
     opacity: 0;
     font-size: 9.986vw;
     font-family: 'Ilisarniq-Black';
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 0.2vw;
-    transform: skew(0deg, -5deg);
 }
 .left-title.titMove h2 {
     animation: titMove1 1s ease-in-out forwards;
 }
 @keyframes titMove1 {
-    0% {top: 16.25vw; left: 15.604vw; opacity: 0; transform: skew(0deg, -5deg);}
-    100% {top: 1.25vw; left: 7.604vw; opacity: 1; transform: skew(0deg, 0deg);}
+    /* 0% {top: 16.25vw; left: 15.604vw; opacity: 0; transform: skew(0deg, -5deg);} */
+    0% {top: 16.25vw; left: 24.604vw; opacity: 0; transform: skew(0deg, -5deg);}
+    /* 100% {top: 1.25vw; left: 7.604vw; opacity: 1; transform: skew(0deg, 0deg);} */
+    100% {top: 1.25vw; left: 15.604vw; opacity: 1; transform: skew(0deg, 0deg);}
+}
+.left-title.titFadeOut h2 {
+    animation: titFadeOut1 .5s ease-in-out forwards;
+}
+@keyframes titFadeOut1 {
+    /* 0% {top: 1.25vw; left: 7.604vw; opacity: 1;} */
+    0% {top: 1.25vw; left: 15.604vw; opacity: 1;}
+    /* 100% {top: 1.25vw; left: 7.604vw; opacity: 0;} */
+    100% {top: 1.25vw; left: 15.604vw; opacity: 0;}
 }
 h2.ftitle {
     z-index: 10;
@@ -171,8 +191,10 @@ h2.ftitle {
 .sec1-img {
     background: url(../img/webstandard_silver_gray.jpg) no-repeat center center;
     width: 100%; height: 100%;
+    position: relative;
 }
 .left-num-wrap {
+    /* position: absolute; top: 18vw; left: 86vw; */
     position: absolute; top: 18vw; left: 86vw;
     z-index: -1;
     transform: rotate(90deg);
