--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -1,7 +1,7 @@
 /* layout */
 body {
     background: #1b1b1b;
-    /* overflow-x: hidden; 모바일에서 에러라 삭제해야함 */
+    overflow: visible !important;
 }
 #contents {}
 /* #big-title {
