--- a/port/css/prism.css
+++ b/port/css/prism.css
@@ -40,7 +40,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #202124;
+	background: #282C34;
 }
 
 /* Inline code */
