--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -269,7 +269,7 @@ h2.ftitle {
     background: #12DA97;
 }
 .circle-wrap1 {
-    position: absolute; top: 57.7vw; right: 20vw;
+    position: absolute; top: 57.7vw; left: 54.4vw;
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -292,7 +292,7 @@ h2.ftitle {
     100% {transform: rotate(360deg);}
 }
 .circle-wrap2 {
-    position: absolute; top: 64vw; right: 8vw;
+    position: absolute; top: 64vw; left: 64.5vw;
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -315,7 +315,7 @@ h2.ftitle {
     100% {transform: rotate(-360deg);}
 }
 .circle-wrap3 {
-    position: absolute; top: 74vw; right: 15vw;
+    position: absolute; top: 74vw; left: 61.3vw;
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -338,7 +338,7 @@ h2.ftitle {
     100% {transform: rotate(-360deg);}
 }
 .circle-wrap4 {
-    position: absolute; top: 79vw; right: 4vw;
+    position: absolute; top: 79vw; left: 70.4vw;
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -367,7 +367,7 @@ h2.ftitle {
     width: 46.563vw;
     /* height: 28.49vw; */
     height: 547px;
-    background: #35363A;
+    background: #282C34;
     border-radius: 5px;
 }
 .menu-bar {
@@ -463,14 +463,14 @@ h2.ftitle {
     border-radius: 10px 10px 0 0;
 }
 .title-bar .tap a.active {
-    background: #35363A;
+    background: #282C34;
 }
 .title-bar > div .code-content {
     position: absolute; top: 74px; left: -74px;
     z-index: 20;
     /* width: 885px; height: 460px; 원래크기. 반응형때문에 잠시 주석 */
     width: 46.094vw; height: 460px;
-    background: #202124; 
+    background: #282C34; 
     overflow: auto;
 }
 
@@ -517,7 +517,7 @@ h2.ftitle {
     /* width: 84%; */
     width: 742px;
     height: 39px;
-    background: #35363A;
+    background: #282C34;
     color: #fff;
 }
 .option-bar .address-box .address {
@@ -545,7 +545,7 @@ h2.ftitle {
     /* width: 4%; */
     width: 44px;
     height: 37px;
-    background: #35363A;
+    background: #282C34;
 }
 .option-bar .dot-box .dot {
     width: 4px;
@@ -602,8 +602,17 @@ h2.ftitle {
         background-size: cover;
         left: 0 !important;
     }
+    .left-desc-wrap .left-desc {
+        top: 9vw;
+    }
+    .left-desc-wrap .left-desc ul .desc-title {
+        margin-bottom: 0.6vw;
+    }
     .left-desc-wrap .left-desc ul .desc-desc {
         font-size: 0.1vw;
+    }
+    .btn-wrap {
+        top: 17.6vw;
     }
     .btn-wrap a {
         height: 32px;
