--- a/port/css/prism.css
+++ b/port/css/prism.css
@@ -11,7 +11,8 @@ pre[class*="language-"] {
 	color: #f8f8f2;
 	background: none;
 	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	/* font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace; */
+	font-family: Cascadia, "SF Pro Display";
 	font-size: 1.1em;
 	text-align: left;
 	white-space: pre;
@@ -54,62 +55,55 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: slategray;
+	color: #999;
 }
 
 .token.punctuation {
-	color: #f8f8f2;
+	color: #ccc;
 }
 
-.token.namespace {
-	opacity: .7;
-}
-
-.token.property,
 .token.tag,
-.token.constant,
-.token.symbol,
+.token.attr-name,
+.token.namespace,
 .token.deleted {
-	color: #f92672;
+	color: #e2777a;
+}
+.token.function-name {
+	color: #6196cc;
 }
 
 .token.boolean,
-.token.number {
-	color: #ae81ff;
+.token.number,
+.token.function {
+	color: #f08d49;
+}
+
+.token.property,
+.token.class-name,
+.token.constant,
+.token.symbol {
+	color: #f8c555;
 }
 
 .token.selector,
-.token.attr-name,
+.token.important,
+.token.atrule,
+.token.keyword,
+.token.builtin {
+	color: #cc99cd;
+}
 .token.string,
 .token.char,
-.token.builtin,
-.token.inserted {
-	color: #a6e22e;
+.token.attr-value,
+.token.regex,
+.token.variable {
+	color: #7ec699;
 }
 
 .token.operator,
 .token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string,
-.token.variable {
-	color: #f8f8f2;
-}
-
-.token.atrule,
-.token.attr-value,
-.token.function,
-.token.class-name {
-	color: #e6db74;
-}
-
-.token.keyword {
-	color: #66d9ef;
-}
-
-.token.regex,
-.token.important {
-	color: #fd971f;
+.token.url {
+	color: #67cdcc;
 }
 
 .token.important,
@@ -122,6 +116,9 @@ pre[class*="language-"] {
 
 .token.entity {
 	cursor: help;
+}
+.token.inserted {
+	color: green;
 }
 
 pre[class*="language-"].line-numbers {
@@ -171,14 +168,14 @@ pre[class*="language-"].line-numbers > code {
 	height: 10px; /* 가로축 스크롤바 길이 */
 }
 .code-content::-webkit-scrollbar-track-piece {
-	background-color: #202124;
+	background-color: #282C34;
 }
 .code-content::-webkit-scrollbar-thumb {
 	border-radius: 8px;
 	background-color: black;
 }
 .code-content::-webkit-scrollbar-corner {
-	background-color: #202124;
+	background-color: #282C34;
 }
 
 .code-content2::-webkit-scrollbar {
@@ -186,12 +183,12 @@ pre[class*="language-"].line-numbers > code {
 	height: 10px; /* 가로축 스크롤바 길이 */
 }
 .code-content2::-webkit-scrollbar-track-piece {
-	background-color: #202124;
+	background-color: #282C34;
 }
 .code-content2::-webkit-scrollbar-thumb {
 	border-radius: 8px;
 	background-color: black;
 }
 .code-content2::-webkit-scrollbar-corner {
-	background-color: #202124;
+	background-color: #282C34;
 }
