--- a/port/css/prism3.css
+++ b/port/css/prism3.css
@@ -6,73 +6,6 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+cli
  * @author Rose Pritchard
  */
 
-
- .code-editor:before,
- .code-editor:after,
- .code-editor span.control:before,
- .code-editor span.after:after {
-     box-sizing: border-box;
-     content: '';
-     position: absolute;
-     z-index: 1;
-     transition: all .5s ease-in-out;
- }
- 
-.code-editor {
-    box-sizing: border-box;
-    width: 60vw; 
-    text-align: left;
-    background-color: #2d2d2d;
-    border-radius: 0 0 5px 5px;
-    transition: all .5s ease-in-out;
-    position: absolute; left: 50%; top: 50%;
-    transform: translate(-50%, -50%);
-}
-.code-editor h3 {
-    color: #222;
-    padding-top: 6px; 
-    text-align: center;
-    top: 0px;
-    width: 100%;
-    height: 30px;
-    background-color: #fafafa;
-    border-radius: 5px 5px 0 0;
-    position: sticky;
-    left: 0;
-    font-size: 14px;
-}
- 
-.code-editor span.control:before {
-    content: '';
-    top: 9px;
-    left: 0;
-    z-index: 2;
-    padding: 6px;
-    border-radius: 20px;
-    -moz-border-radius: 20px;
-    -o-border-radius: 20px;
-    -webkit-border-radius: 20px;
-}
- 
- .code-editor span.control:nth-child(1):before {
-     margin-left: 15px;
-     background-color: #df6963;
-     
- }
- 
-.code-editor span.control:nth-child(2):before {
-    margin-left: 35px;
-    background-color: #f5e18a;
-}
- .code-editor span.control:nth-child(3):before {
-     margin-left: 55px;
-     background-color: #97c38a;
- }
-.code-editor .code {
-    height: 60vh;
-    overflow: auto;
-}
-
 code[class*="language-"],
 pre[class*="language-"] {
 	color: #ccc;
@@ -99,12 +32,14 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-    padding: 1em;
+	padding: 1em;
+	margin: .5em 0;
+	overflow: auto;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #2d2d2d;
+	background: #282C34;
 }
 
 /* Inline code */
@@ -228,20 +163,34 @@ pre[class*="language-"].line-numbers > code {
 			padding-right: 0.8em;
 			text-align: right;
 		}
-::-webkit-scrollbar {
-    width: 10px;  /* 세로축 스크롤바 길이 */
-    height: 10px;  /* 가로축 스크롤바 길이 */
+
+/* scrollbar */
+.code-content::-webkit-scrollbar {
+	width: 10px;  /* 세로축 스크롤바 길이 */
+	height: 10px; /* 가로축 스크롤바 길이 */
 }
-::-webkit-scrollbar-track {
-    background-color: lightblue;
+.code-content::-webkit-scrollbar-track-piece {
+	background-color: #202124;
 }
-::-webkit-scrollbar-track-piece {
-    background-color: gray;
+.code-content::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	background-color: black;
 }
-::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    background-color: black;
+.code-content::-webkit-scrollbar-corner {
+	background-color: #202124;
 }
-::-webkit-resizer {
-    background-color: green;
+
+.code-content2::-webkit-scrollbar {
+	width: 10px;  /* 세로축 스크롤바 길이 */
+	height: 10px; /* 가로축 스크롤바 길이 */
+}
+.code-content2::-webkit-scrollbar-track-piece {
+	background-color: #202124;
+}
+.code-content2::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	background-color: black;
+}
+.code-content2::-webkit-scrollbar-corner {
+	background-color: #202124;
 }
