--- a/port/css/style4.css
+++ b/port/css/style4.css
@@ -20,7 +20,7 @@ html, body {
     /* overflow-x: hidden; */
     overflow: hidden;
     height: 220vh;
-    margin-top: 300px;
+    padding-top: 300px;
 }
 #section2 {}
 #section3 {}
@@ -31,7 +31,7 @@ html, body {
 
 /* container */
 .container {
-    max-width: 1532px;
+    max-width: 1400px;
     width: 100%;
     margin: 0 auto;
 }
@@ -136,9 +136,7 @@ h1.main-tit .split span {
     left: 0px;
 }
 .left-title h2 {
-    /* 애니메이션 후 position: absolute; top: 1.25vw; left: 7.604vw; */
-    /* 애니메이션 전 position: absolute; top: 16.25vw; left: 15.604vw; */
-    position: absolute; top: 16.25vw; left: 24.604vw;
+    position: absolute; top: 5.25vw; left: 24.604vw;
     opacity: 0;
     font-size: 9.986vw;
     font-family: 'Ilisarniq-Black';
@@ -150,19 +148,15 @@ h1.main-tit .split span {
     animation: titMove1 1s ease-in-out forwards;
 }
 @keyframes titMove1 {
-    /* 0% {top: 16.25vw; left: 15.604vw; opacity: 0; transform: skew(0deg, -5deg);} */
-    0% {top: 16.25vw; left: 24.604vw; opacity: 0; transform: skew(0deg, -5deg);}
-    /* 100% {top: 1.25vw; left: 7.604vw; opacity: 1; transform: skew(0deg, 0deg);} */
-    100% {top: 1.25vw; left: 15.604vw; opacity: 1; transform: skew(0deg, 0deg);}
+    0% {top: 5.25vw; left: 24.604vw; opacity: 0; transform: skew(0deg, -5deg);}
+    100% {top: -9vw; left: 15.604vw; opacity: 1; transform: skew(0deg, 0deg);}
 }
 .left-title.titFadeOut h2 {
     animation: titFadeOut1 .5s ease-in-out forwards;
 }
 @keyframes titFadeOut1 {
-    /* 0% {top: 1.25vw; left: 7.604vw; opacity: 1;} */
-    0% {top: 1.25vw; left: 15.604vw; opacity: 1;}
-    /* 100% {top: 1.25vw; left: 7.604vw; opacity: 0;} */
-    100% {top: 1.25vw; left: 15.604vw; opacity: 0;}
+    0% {top: -9vw; left: 15.604vw; opacity: 1;}
+    100% {top: -9vw; left: 15.604vw; opacity: 0;}
 }
 h2.ftitle {
     z-index: 10;
@@ -178,10 +172,10 @@ h2.ftitle {
 .img-wrap {
     width: 67.917vw;
     height: 38.542vw;
-    position: absolute; top: 9.531vw; left: 0;
+    /* position: absolute; top: 9.531vw; left: 0; */
     overflow: hidden;
 }
-.img-wrap::before {
+.sec1-img::before {
     position: absolute; left: 0; top: 0;
     content: '';
     width: 100%; height: 100%;
@@ -269,7 +263,7 @@ h2.ftitle {
     background: #12DA97;
 }
 .circle-wrap1 {
-    position: absolute; top: 57.7vw; left: 54.4vw;
+    /* position: absolute; top: 57.7vw; left: 54.4vw; */
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -292,7 +286,7 @@ h2.ftitle {
     100% {transform: rotate(360deg);}
 }
 .circle-wrap2 {
-    position: absolute; top: 64vw; left: 64.5vw;
+    /* position: absolute; top: 64vw; left: 64.5vw; */
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -315,7 +309,7 @@ h2.ftitle {
     100% {transform: rotate(-360deg);}
 }
 .circle-wrap3 {
-    position: absolute; top: 74vw; left: 61.3vw;
+    /* position: absolute; top: 74vw; left: 61.3vw; */
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -338,7 +332,7 @@ h2.ftitle {
     100% {transform: rotate(-360deg);}
 }
 .circle-wrap4 {
-    position: absolute; top: 79vw; left: 70.4vw;
+    /* position: absolute; top: 79vw; left: 70.4vw; */
     font-family: 'Ilisarniq-Regular';
     font-size: 16px;
     letter-spacing: 0.56px;
@@ -361,196 +355,10 @@ h2.ftitle {
     100% {transform: rotate(360deg);}
 }
 
-.left-chromebox {position: relative;}
-.left-chromebox .left-chromewrap {
-    position: absolute; top: 56.583vw; left: 4vw;
-    width: 46.563vw;
-    /* height: 28.49vw; */
-    height: 547px;
-    background: #282C34;
-    border-radius: 5px;
-}
-.menu-bar {
-    position: relative;
-    font-family: "SF Pro Display";
-    font-weight: 300;
-    font-size: 12px;
-    letter-spacing: 1px;
-    display: flex;
-    width: 100%;
-    /* height: 8%; */
-    height: 42px;
-    border-radius: 5px 5px 0px 0px;
-    background: #202124;
-}
-.menu-bar .circle-bar {
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 0 13px;
-    /* padding: 0 0.677vw; */
-    width: 78px;
-    height: 100%;
-    background: #202124;
-    border-radius: 5px 0px 0px 0px;
-}
-.circle-bar .red {
-    margin-right: 8px;
-    width: 12px; height: 12px;
-    border-radius: 50%;
-    background: #ED6A5F;
-}
-.circle-bar .yellow {
-    margin-right: 8px;
-    width: 12px; height: 12px;
-    border-radius: 50%;
-    background: #F6BF4F;
-}
-.circle-bar .green {
-    width: 12px; height: 12px;
-    border-radius: 50%;
-    background: #63C654;
+.codecontainer {
+    background: red;
 }
 
-.menu-bar .title-bar {
-    position: absolute; top: 8px; left: 78px;
-    z-index: 20;
-    display: flex;
-    /* width: 88%; */
-    /* width: 42.5vw; */
-    /* height: 100%; */
-    height: 81%;
-    background: #202124;
-}
-.title-bar .tap .target {
-    box-sizing: border-box;
-    padding-left: 2vw;
-}
-.title-bar .htmlTap {
-    width: 12.5vw;
-}
-.title-bar .htmlTap a {
-    display: inline-block;
-    line-height: 36px;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    background: #18181b;
-    border-radius: 10px 10px 0 0;
-}
-.title-bar .cssTap {
-    width: 12.5vw;
-}
-.title-bar .cssTap a {
-    display: inline-block;;
-    line-height: 36px;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    background: #18181b;
-    border-radius: 10px 10px 0 0;
-}
-.title-bar .scriptTap {
-    width: 12.5vw;
-}
-.title-bar .scriptTap a {
-    display: inline-block;
-    line-height: 36px; 
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    background: #18181b;
-    border-radius: 10px 10px 0 0;
-}
-.title-bar .tap a.active {
-    background: #282C34;
-}
-.title-bar > div .code-content {
-    position: absolute; top: 74px; left: -74px;
-    z-index: 20;
-    /* width: 885px; height: 460px; 원래크기. 반응형때문에 잠시 주석 */
-    width: 46.094vw; height: 460px;
-    background: #282C34; 
-    overflow: auto;
-}
-
-.menu-content {
-    position: relative;
-    width: 100%;
-    box-sizing: border-box;
-}
-.menu-content .option-bar {
-    font-family: "SF Pro Display";
-    font-weight: 300;
-    display: flex;
-    width: 100%;
-    /* height: 8%; */
-    height: 36px;
-}
-.arrow-box {
-    display: flex;
-    align-items: center;
-    padding: 0 15px;
-    box-sizing: border-box;
-    width: 108px;
-    height: 37px;
-}
-.option-bar .arrowL {
-    width: 14px;
-    height: 13px;
-    margin-right: 18px;
-}
-.option-bar .arrowR {
-    width: 14px;
-    height: 13px;
-    margin-right: 18px;
-}
-.option-bar .redo {
-    width: 14px;
-    height: 13px;
-}
-.option-bar .address-box {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* width: 84%; */
-    width: 742px;
-    height: 39px;
-    background: #282C34;
-    color: #fff;
-}
-.option-bar .address-box .address {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 28px;
-    background: #202124;
-    border-radius: 30px;
-}
-.option-bar .address-box .address .address-target {
-    position: absolute; top: 9px; left: 33px;
-    display: none;
-}
-.option-bar .address-box .address .address-target.show {
-    display: block;
-}
-.option-bar .address-box .address span {
-    padding: 0 13px 0 14px;
-}
-.option-bar .dot-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* width: 4%; */
-    width: 44px;
-    height: 37px;
-    background: #282C34;
-}
-.option-bar .dot-box .dot {
-    width: 4px;
-    height: 14px;
-}
 
 /* mediaquery */
 @media (max-width: 1024px){
@@ -684,5 +492,15 @@ h2.ftitle {
     }
     .header-title .desc, .cursor, .cursorbg {
         display: none;
+    }
+
+    /* secttion1 */
+    .img-wrap {
+        width: 77vw;
+        height: 70vh;
+    }
+    h2.ftitle {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 1px #fff;
     }
 }
